force-app/main/default/objects/CTRShippingCountry__c.object
<CustomObject>
    <fields>
        <fullName>CTRRequestFormItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CTR Request Form Item</label>
        <referenceTo>CTRRequestFormItem__c</referenceTo>
        <relationshipLabel>CTR Shipping Country</relationshipLabel>
        <relationshipName>CTRShippingCountry</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CTR Shipping Country</relationshipLabel>
        <relationshipName>CTR_Shipping_Country</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocationType__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>CTRRequestFormItem__r.ProductName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestFormStatus__c</fullName>
        <formula>TEXT(CTRRequestFormItem__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Form Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <label>Shipping Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CTR Shipping Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Customer__c</columns>
        <columns>ShippingCountry__c</columns>
        <columns>LocationType__c</columns>
        <columns>CTRRequestFormItem__c</columns>
        <columns>RequestFormStatus__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>Shipping Country Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>